--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: "ci"
+name: CI
 
 on:
   pull_request:
@@ -11,12 +11,40 @@ on:
       - 'CODEOWNERS'
       - 'AUTHORS'
   workflow_dispatch:
+    inputs:
+      run_spec:
+        description: "Run Spec job"
+        type: boolean
+        required: false
+        default: true
+      run_acceptance:
+        description: "Run Acceptance job"
+        type: boolean
+        required: false
+        default: false
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
+  Matrix:
+    uses: ./.github/workflows/matrix.yml
+    with:
+      flags: "--exclude-platforms '[\"Ubuntu-18.04\"]'" # TODO: remove after postgres module update
   Spec:
-    uses: ./.github/workflows/module_ci.yml
+    if: ${{ github.event_name == 'pull_request' || inputs.run_spec == 'true' }}
+    needs: Matrix
+    uses: ./.github/workflows/module_spec.yml
     secrets: inherit
+    with:
+      ignore_dependency_check: true # TODO: remove after module updates
+      matrix: ${{ needs.Matrix.outputs.spec_matrix }}
+  Acceptance:
+    if: ${{ github.event_name == 'pull_request' || inputs.run_acceptance == 'true' }}
+    needs: [ Matrix, Spec ]
+    uses: ./.github/workflows/module_acceptance.yml
+    secrets: inherit
+    with:
+      matrix: ${{ needs.Matrix.outputs.acceptance_matrix }}
+      runs_on: ubuntu-20.04 # TODO: cgroupv1 containers do not provision on ubuntu-latest
