--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,18 @@
-name: "ci"
+name: ci
 
 on:
+  workflow_call:
+    inputs:
+      run_spec:
+        description: "Run Spec job"
+        type: boolean
+        required: false
+        default: true
+      run_acceptance:
+        description: "Run Acceptance job"
+        type: boolean
+        required: false
+        default: false
   pull_request:
     branches:
       - "main"
@@ -11,6 +23,17 @@ on:
       - 'CODEOWNERS'
       - 'AUTHORS'
   workflow_dispatch:
+    inputs:
+      run_spec:
+        description: "Run Spec job"
+        type: boolean
+        required: false
+        default: true
+      run_acceptance:
+        description: "Run Acceptance job"
+        type: boolean
+        required: false
+        default: false
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -19,12 +42,14 @@ concurrency:
 jobs:
   Matrix:
     uses: ./.github/workflows/module_matrix.yml
-  #Spec:
-  #  uses: ./.github/workflows/module_ci.yml
-  #  secrets: inherit
-  Acceptance:
-    uses: "./.github/workflows/module_acceptance.yml"
-    secrets: "inherit"
     with:
       runs_on: "ubuntu-20.04"
       flags: "--exclude-platforms '[\"Ubuntu-18.04\"]'"
+  Spec:
+    if: ${{ inputs.run_spec == 'true' }}
+    uses: ./.github/workflows/module_ci.yml
+    secrets: inherit
+  Acceptance:
+    if: ${{ inputs.run_matrix == 'true' }}
+    uses: "./.github/workflows/module_acceptance.yml"
+    secrets: "inherit"
