el7 failures? add workflow debug flag

--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -22,7 +22,7 @@ on:
 
 jobs:
   generate-json-matrix:
-    name: Generate output
+    name: Generate
     runs-on: ${{ inputs.runs_on }}
     outputs:
       spec_matrix: ${{ steps.get-matrix.outputs.spec_matrix }}
