--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,11 @@ on:
       - 'AUTHORS'
   workflow_dispatch:
     inputs:
+      debug:
+        description: "Debug"
+        type: boolean
+        required: false
+        default: true
       run_spec:
         description: "Run Spec job"
         type: boolean
@@ -38,6 +43,7 @@ jobs:
     uses: ./.github/workflows/module_spec.yml
     secrets: inherit
     with:
+      debug: ${{ github.events.inputs.debug == 'true' }}
       ignore_dependency_check: true # TODO: remove after module updates
       matrix: ${{ needs.Matrix.outputs.spec_matrix }}
   Acceptance:
@@ -46,5 +52,6 @@ jobs:
     uses: ./.github/workflows/module_acceptance.yml
     secrets: inherit
     with:
+      debug: ${{ github.events.inputs.debug == 'true' }}
       matrix: ${{ needs.Matrix.outputs.acceptance_matrix }}
       runs_on: ubuntu-20.04 # TODO: cgroupv1 containers do not provision on ubuntu-latest
