--- a/.github/workflows/module_acceptance.yml
+++ b/.github/workflows/module_acceptance.yml
@@ -51,12 +51,14 @@ jobs:
           ruby-version: ${{ inputs.ruby_version }}
           bundler-cache: true
 
-      - name: Bundle environment
-        if: ${{ inputs.debug == 'true' }}
+      - name: Debug
+        if: ${{ inputs.debug == true }}
         run: |
           echo ::group::bundler environment
           bundle env
           echo ::endgroup::
+          echo "RSPEC_DEBUG=1" >> $GITHUB_ENV
+          echo "DEBUG=1" >> $GITHUB_ENV
 
       - name: Provision test environment
         timeout-minutes: 10
