--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,10 @@ name: CI
 
 on:
   pull_request:
+    types:
+      - opened
+      - labeled
+      - synchronize
     branches:
       - "main"
     paths-ignore:
@@ -43,7 +47,7 @@ jobs:
     uses: ./.github/workflows/module_spec.yml
     secrets: inherit
     with:
-      debug: ${{ github.events.inputs.debug == 'true' }}
+      debug: ${{ github.events.inputs.debug == 'true' || contains(github.event.pull_request.labels.*.name, 'debug') }}
       ignore_dependency_check: true # TODO: remove after module updates
       matrix: ${{ needs.Matrix.outputs.spec_matrix }}
   Acceptance:
@@ -52,6 +56,6 @@ jobs:
     uses: ./.github/workflows/module_acceptance.yml
     secrets: inherit
     with:
-      debug: ${{ github.events.inputs.debug == 'true' }}
+      debug: ${{ github.events.inputs.debug == 'true' || contains(github.event.pull_request.labels.*.name, 'debug') }}
       matrix: ${{ needs.Matrix.outputs.acceptance_matrix }}
       runs_on: ubuntu-20.04 # TODO: cgroupv1 containers do not provision on ubuntu-latest
