--- a/.github/workflows/module_acceptance.yml
+++ b/.github/workflows/module_acceptance.yml
@@ -67,19 +67,35 @@ jobs:
           FILE='spec/fixtures/litmus_inventory.yaml'
           sed -e 's/password: .*/password: "[redacted]"/' < $FILE || true
 
-      - name: Install agent and module
+      - name: Install agent
         run: |
           echo ::group::agent
           bundle exec rake 'litmus:install_agent[${{ matrix.collection }}]'
           echo ::endgroup::
-          echo ::group::module
-          bundle exec rake 'litmus:install_module'
-          echo ::endgroup::
+
+      - name: Cache fixture modules
+        id: cache-fixtures
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-fixtures-modules
+        with:
+          path: ~/spec/fixtures/modules
+          key: test-${{ env.cache-name }}-${{ hashFiles('metadata.json', '.fixtures.yml') }}
+          restore-keys: |
+            test-${{ env.cache-name }}-
+            test-
+
+      - if: ${{ steps.cache-fixtures.outputs.cache-hit != 'true' }}
+        name: List the state of fixture modules
+        continue-on-error: true
+        run: ls -1 spec/fixtures/modules
+
+      - name: Install module
+        run: bundle exec rake 'litmus:install_module'
 
       - name: Run acceptance tests
         timeout-minutes: 15
-        run: |
-          bundle exec rake 'litmus:acceptance'
+        run: bundle exec rake 'litmus:acceptance'
 
       - name: Tear down
         if: ${{ always() }}
