--- a/.github/workflows/module_spec.yml
+++ b/.github/workflows/module_spec.yml
@@ -87,4 +87,4 @@ jobs:
         run: ls -1 spec/fixtures/modules
 
       - name: "Run tests"
-        run: bundle exec rake parallel_spec
+        run: bundle exec rake parallel_spec_standalone
