--- a/.github/workflows/module_acceptance.yml
+++ b/.github/workflows/module_acceptance.yml
@@ -90,7 +90,7 @@ jobs:
 
       - name: Run acceptance tests
         timeout-minutes: 15
-        run: bundle exec rake 'litmus:acceptance'
+        run: bundle exec rake 'litmus:acceptance[requirement]'
 
       - name: Tear down
         if: ${{ always() }}
