--- a/.github/workflows/module_acceptance.yml
+++ b/.github/workflows/module_acceptance.yml
@@ -57,6 +57,9 @@ jobs:
           echo ::group::bundler environment
           bundle env
           echo ::endgroup::
+          echo ::group::docker info
+          docker info
+          echo ::endgroup::
           echo "RSPEC_DEBUG=1" >> $GITHUB_ENV
           echo "DEBUG=1" >> $GITHUB_ENV
 
@@ -78,6 +81,13 @@ jobs:
           bundle exec rake 'litmus:provision[${{matrix.platforms.provider}},${{ matrix.platforms.image }}]'
           FILE='spec/fixtures/litmus_inventory.yaml'
           sed -e 's/password: .*/password: "[redacted]"/' < $FILE || true
+          if [ "${{ debug }}" == "true" ] ; then
+            while read CN ; do
+              echo ::group::docker container $CN
+              docker inspect "$CN"
+              echo ::endgroup::
+            done < <(docker ps --format '{{.Names}}')
+          fi
 
       - name: Install agent
         run: |
@@ -90,7 +100,7 @@ jobs:
 
       - name: Run acceptance tests
         timeout-minutes: 15
-        run: bundle exec rake 'litmus:acceptance[requirement]'
+        run: bundle exec rake 'litmus:acceptance:parallel[requirement]'
 
       - name: Tear down
         if: ${{ always() }}
