--- a/provision.yaml
+++ b/provision.yaml
@@ -2,6 +2,7 @@
 default:
   provisioner: docker
   images:
+    - litmusimage/ubuntu:18.04
     - litmusimage/ubuntu:20.04
 yum:
   provisioner: docker
