--- a/.github/workflows/mend.yml
+++ b/.github/workflows/mend.yml
@@ -12,5 +12,5 @@ on:
 
 jobs:
   mend:
-    uses: "puppetlabs/cat-github-actions/.github/workflows/mend_ruby.yml@main"
+    uses: "puppetlabs/cat-github-actions/.github/workflows/mend_ruby.yml@forked-modules"
     secrets: "inherit"
